--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 }
 
 .title{
-    margin-left: 75px !important;
+    margin-left: 90px !important;
 }
 
 input{    
@@ -50,7 +50,12 @@ input{
 }
 
 .logo-tasks{
-    float: none;
+  width: 80px;
+  margin-left: 40%;
+  margin-top: 20px;
+}
+.hr-login{
+  margin-left: 50px !important;
 }
 
 .t{
@@ -191,3 +196,4 @@ li {
     margin-left: 40px;
     margin-bottom: 25px;
   }
+
