Adicionando icons de opções(add, logout )

--- a/css/style.css
+++ b/css/style.css
@@ -197,3 +197,10 @@ li {
     margin-bottom: 25px;
   }
 
+
+  .icon-settings{
+      float: right;
+      width: 40px;
+      margin-right: 40px;
+      margin-bottom: 25px;
+  }
